--- a/Autolayout/Base.lproj/Main.storyboard
+++ b/Autolayout/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,10 +15,62 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="600" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="hK3-yh-agB" customClass="AnimatedView">
+                                <rect key="frame" x="0.0" y="20" width="600" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yeu-2v-ih1">
+                                        <rect key="frame" x="8" y="8" width="40" height="20"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kjy-C9-LFX">
+                                        <rect key="frame" x="8" y="64" width="40" height="20"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Xp-03-36f">
+                                        <rect key="frame" x="8" y="36" width="40" height="20"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstItem="Yeu-2v-ih1" firstAttribute="top" secondItem="hK3-yh-agB" secondAttribute="top" constant="8" id="FsC-9k-hXM"/>
+                                    <constraint firstItem="Kjy-C9-LFX" firstAttribute="top" secondItem="1Xp-03-36f" secondAttribute="bottom" constant="8" id="KXj-ER-KHY"/>
+                                    <constraint firstItem="Yeu-2v-ih1" firstAttribute="leading" secondItem="hK3-yh-agB" secondAttribute="leading" constant="8" id="SG9-zd-ix2"/>
+                                    <constraint firstItem="Yeu-2v-ih1" firstAttribute="centerX" secondItem="1Xp-03-36f" secondAttribute="centerX" id="TJC-xN-dL5"/>
+                                    <constraint firstItem="Kjy-C9-LFX" firstAttribute="centerX" secondItem="1Xp-03-36f" secondAttribute="centerX" id="TZE-b2-zXn"/>
+                                    <constraint firstItem="1Xp-03-36f" firstAttribute="top" secondItem="Yeu-2v-ih1" secondAttribute="bottom" constant="8" id="wKg-XC-DIB"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="npj-bW-fLl" appends="YES" id="QLg-Q0-H6f"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="hK3-yh-agB" secondAttribute="centerX" id="Fms-KK-e4h"/>
+                            <constraint firstAttribute="trailing" secondItem="hK3-yh-agB" secondAttribute="trailing" id="TO7-bR-cZk"/>
+                            <constraint firstItem="hK3-yh-agB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="iiP-se-6nx"/>
+                            <constraint firstItem="hK3-yh-agB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="rw9-xq-iUn"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="animatedView" destination="hK3-yh-agB" id="Zfp-Im-YOD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="npj-bW-fLl">
+                    <connections>
+                        <action selector="viewDidTap:" destination="BYZ-38-t0r" id="F8W-nR-VBD"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
         </scene>
     </scenes>
