--- a/Autolayout/Base.lproj/Main.storyboard
+++ b/Autolayout/Base.lproj/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="600" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="hK3-yh-agB" customClass="AnimatedView">
-                                <rect key="frame" x="0.0" y="20" width="600" height="100"/>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="hK3-yh-agB" customClass="AnimatedView">
+                                <rect key="frame" x="0.0" y="20" width="600" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yeu-2v-ih1">
                                         <rect key="frame" x="8" y="8" width="40" height="20"/>
@@ -41,6 +41,7 @@
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="5cb-3l-HZh"/>
                                     <constraint firstItem="Yeu-2v-ih1" firstAttribute="top" secondItem="hK3-yh-agB" secondAttribute="top" constant="8" id="FsC-9k-hXM"/>
                                     <constraint firstItem="Kjy-C9-LFX" firstAttribute="top" secondItem="1Xp-03-36f" secondAttribute="bottom" constant="8" id="KXj-ER-KHY"/>
                                     <constraint firstItem="Yeu-2v-ih1" firstAttribute="leading" secondItem="hK3-yh-agB" secondAttribute="leading" constant="8" id="SG9-zd-ix2"/>
@@ -63,6 +64,7 @@
                     </view>
                     <connections>
                         <outlet property="animatedView" destination="hK3-yh-agB" id="Zfp-Im-YOD"/>
+                        <outlet property="heightConstraint" destination="5cb-3l-HZh" id="fM5-Gw-Igg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
